<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- TITLE -->
            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:inputType="text"
                android:layout_marginBottom="8dp"/>

            <!-- DESCRIPTION -->
            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:inputType="text"
                android:layout_marginBottom="8dp"/>

            <!-- DATE: click opens a DatePicker -->
            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_hint"
                android:focusable="false"
                android:clickable="true"
                android:layout_marginBottom="8dp"/>

            <!-- LOCATION TEXT -->
            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint"
                android:inputType="text"
                android:layout_marginBottom="16dp"/>

            <!-- ADD / UPDATE BUTTON -->
            <Button
                android:id="@+id/btnSavePlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_place"/>
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaces"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>